<resources>
    <string name="app_name">Really English</string>
    <string name="button_apply">apply</string>
    <string name="title_dialog_lists_verbs">Choose what you want to learn</string>
    <string name="button_algorithm_lesson">Algorithm lesson</string>
    <string name="button_couples">Couples</string>
    <string name="couples_activity_button_next">Next couple</string>
    <string name="button_lists">Lists</string>
    <string name="counter_vertical_line">|</string>
    <string name="algorithm_activity_button_next">Next</string>
    <string name="image_type_tense">type of tense</string>
    <string name="button_wrong_sentence">Wrong sentence</string>
    <string name="image_type_sentence">type of sentence</string>
    <string name="image_button_verbs">verbs</string>
    <string name="image_button_adjectives">adjectives</string>
    <string name="button_repeat_zone">Repetition zone</string>
    <string name="repeat_zone_button_next">Next</string>
    <string name="button_back">Back</string>
    <string name="counter_zero">0</string>
    <string name="check_box_future">Future</string>
    <string name="check_box_present">Present</string>
    <string name="check_box_past">Past</string>
    <string name="check_box_simple">Simple</string>
    <string name="check_box_strong">Strong</string>
    <string name="check_box_to_be">To Be</string>
    <string name="sign_minus">-</string>
    <string name="sign_plus">+</string>
    <string name="sign_question">\?</string>
    <string name="sign_minus_question">-?</string>
    <string-array name="strong_verbs">
        <item>can</item>
        <item>may</item>
        <item>must</item>
        <item>should</item>
        <item>would</item>
    </string-array>
    <string-array name="personal_pronouns">
        <item>I</item>
        <item>you</item>
        <item>he</item>
        <item>she</item>
        <item>it</item>
        <item>we</item>
        <item>they</item>
    </string-array>
    <string-array name="question_words">
        <item>Why</item>
        <item>Where</item>
        <item>When</item>
        <item>What</item>
        <item>How</item>
        <item>How much</item>
        <item>How many</item>
        <item>Who</item>
        <item>Which of</item>
        <item>Whose</item>
    </string-array>
    <string name="simple_verbs_1">
        like,want,need,ask,listen,start,love,finish,live,hate,work,play,learn,look,help,wait,explain,rest,hope,pay,stay,answer
    </string>
    <string name="simple_verbs_2">
        believe,happen,allow,try,say,look for,compare,smile,use,call,laugh,demand,pour,clean,count on,dress,walk
        ,command,manage,agree,recommend,wash,talk,promise,remember,seem,visit,prefer,thank,study,refuse
    </string>
    <string name="simple_verbs_3">
        apply,punish,excuse,arrange,deceive,suit,lift,cook,wonder,kill,check,die,advise,worry,present,change,argue
        ,shout,depend,lie,cancel,convince,decide,repeat,scare,doubt,watch,harm,carry,fail,close,hurry,save
    </string>
    <string name="simple_verbs_4">
        move,breath,cry,improve,disturb,translate,respect,matter,increase,decrease,miss,destroy,defend,touch,compete,wish,succeed,prepare,order,appear,disappear
        ,owe,exist,invite,knock,repair,pass,conceal,remind,turn,return,annoy,complain,pretend,tie,connect,practice,switch,describe,solve,follow,sound,travel
    </string>
    <string name="simple_verbs_5">
        enjoy,discuss,congratulate,guess,cough,pull,insist,push,sneeze,achieve,envy,hint,own,multiply,blame,concern,suffer,behave,add,fix
        ,divide,accept,differ,mix,paint,notice,subtract,belong,care,offend,imagine,attack,avoid,please,invent,rid,fill,chew,force,pray,amaze
    </string>
    <string name="simple_verbs_6">
        celebrate,hire,fire,cause,praise,consist,earn,consider,suspect,survive,interrupt,drag,rob,create,act,continue,warn,threaten,award,reward,rent,offer,interfere,influence
        ,propose,develop,afford,marry,cover,express,yawn,treat,wound,fulfill,delay,beware,deny,object,bake,support,mention,realize,dare,invest,assemble,disassemble,bless,join,advertize
    </string>
    <string name="irregular_verbs_v1_1">
        get,come,understand,tell,put,teach,buy,see,hear,let,read,drink,sleep,know,speak,eat,write,make,fight,give,drive,take,sit,run,go
    </string>
    <string name="irregular_verbs_v1_2">
        bring,forbid,say,fly,break,stand,catch,build,show,sell,keep,wear,spend,win,forget,lose,mean,meet,send
    </string>
    <string name="irregular_verbs_v1_3">
        feed,steal,cut,shoot,hold,make clear,feel,feel for,leave,upset,fall,sing,dream,choose,lie,deal,prove,spoil
    </string>
    <string name="irregular_verbs_v1_4">
        hurt,begin,throw,strive,cost,hide,grow,burn,put,smell,lead,mislead
    </string>
    <string name="irregular_verbs_v1_5">
        forgive,tear,become,bite,swear,hit,draw,beat,set
    </string>
    <string name="irregular_verbs_v1_6">
        seek,spell,quit,wake,hang
    </string>
    <string name="irregular_verbs_v2_1">
        got,came,understood,told,put,taught,bought,saw,heard,let,read,drank,slept,knew,spoke,ate,wrote,made,fought,gave,drove,took,sat,ran,went
    </string>
    <string name="irregular_verbs_v2_2">
        brought,forbade,said,flew,broke,stood,caught,built,showed,sold,kept,wore,spent,won,forgot,lost,meant,met,sent
    </string>
    <string name="irregular_verbs_v2_3">
        fed,stole,cut,shot,held,made clear,felt,felt for,left,upset,fell,sang,dreamed,chose,lay,dealt,proved,spoiled
    </string>
    <string name="irregular_verbs_v2_4">
        hurt,began,threw,strove,cost,hid,grew,burned,put,smelled,led,misled
    </string>
    <string name="irregular_verbs_v2_5">
        forgave,tore,became,bit,swore,hit,drew,beat,set
    </string>
    <string name="irregular_verbs_v2_6">
        sought,spelt,quit,woke,hung
    </string>
    <string name="irregular_verbs_v3_1">
        got,come,understood,told,put,taught,bought,seen,heard,let,read,drunk,slept,known,spoken,eaten,written,made,fought,given,driven,taken,sat,run,gone
    </string>
    <string name="irregular_verbs_v3_2">
        brought,forbidden,said,flown,broken,stood,caught,built,shown,sold,kept,worn,spent,won,forgotten,lost,meant,met,sent
    </string>
    <string name="irregular_verbs_v3_3">
        fed,stolen,cut,shot,held,made clear,felt,felt for,left,upset,fallen,sung,dreamed,chosen,lain,dealt,proven,spoiled
    </string>
    <string name="irregular_verbs_v3_4">
        hurt,begun,thrown,striven,cost,hidden,grown,burned,put,smelled,led,misled
    </string>
    <string name="irregular_verbs_v3_5">
        forgiven,torn,become,bitten,sworn,hit,drawn,beaten,set
    </string>
    <string name="irregular_verbs_v3_6">
        sought,spelt,quit,woken,hung
    </string>
    <string name="subjects">
        Sam,Frank,defense,girl,government,people,hamburger,dog,grandfather,party,bird,shark,manager,friend,
    </string>
    <string name="names">
        Sam,Frank,Britney,Selena,Bruno,Rebeca,Justin,Avril Lavigne,Alexandra,Taylor,my brother,her sister,his friend
    </string>
    <string name="adjective_1">
         first,good,bad,big,hard,small,strong,noisy,next,lazy,similar,heavy,different,easy,angry,sad,smart,long,stupid,short,old,pretty,high,tall,young,low,new,
        cute,simple,happy,clear,clean,usual,ready,cool,stubborn,poor,dark,loud,true,constant,experienced,inexperienced,nervous,false,temporary,calm,patient,impatient
    </string>
    <string name="adjective_2">
        normal,cruel,pleased,displeased,ashamed,attentive,inattentive,greedy,typical,whole,convenient,inconvenient,ancient,careful,thirsty,single,serious,great,double,
        smooth,brave,tiny,triple,main,basic,early,proud,rich,hungry,sweet,disgusting,fast,quick,sour,late,shy,nasty,perfect,curious,familiar,responsible,irresponsible,full,dirty,crazy
    </string>
    <string name="adjective_3">
        present,weak,cheap,left,wrong,sure,messy,pleasant,unpleasant,slow,afraid,sorry,far,able,unable,tired,fresh,useful,important,famous,harmful,alive,interesting,dead,wet,cold,
        alone,busy,complicated,hot,dry,real,quiet,stinky,transparent,special,excellent,round,much/many,salty,favorite,dangerous,funny,empty,same,terrible,deep,silent,free,wide,active
    </string>
    <string name="adjective_4">
        light,narrow,slim,thin,thick,soft,foreign,healthy,colorful,expensive,inexpensive,wonderful,sick,right,sloppy,boring,neat,insolent,fragrant,close,modest,honest,dishonest,
        modern,wild,lucky,unlucky,huge,giant,exact,strange, weird,polite,impolite,possible,impossible,tasty,crude,rude,guilty,legal,illegal,square,suitable,talented,gifted,firm
    </string>
    <string name="adjective_like_verbs">
        afraid,shy,sorry,silent,late,sick,proud,squeamish,present,absent,indignant,patient,jealous,picky
    </string>
    <string name="twins">
        meanwhile,for..`s sake,since,until,ahead,gradually,desirable,literally,especially,between,among,immediately,along,across,another,rather,per se,at last,whereas
    </string>
    <string name="note_adjective">[adj]</string>
    <string name="note_regular">[reg]</string>
    <string-array name="couples_english_qu">
        <item>It can take much time. (Сколько?)</item>
        <item>She so often forgets her keys. (Почему?)</item>
        <item>You will see him there. (Где?)</item>
        <item>I may start the work. (Когда?)</item>
        <item>The boss pays you good money. (Сколько?)</item>
        <item>You will be at home at 5 pm. (Когда?)</item>
        <item>They heard this story. (Какую историю?)</item>
        <item>You will be able to come tomorrow. (Когда?)</item>
        <item>She has so many problems with her son. (Почему?)</item>
        <item>I need to go there. (Почему?)</item>
        <item>I had to do it yesterday. (Когда?)</item>
        <item>He likes expensive cars. (Какие?)</item>
        <item>I may do it. (Что?)</item>
        <item>You had to do this. (Когда?)</item>
        <item>The children were so afraid of the guest. (Почему?)</item>
        <item>He wanted so much to work with us. (Почему?)</item>
        <item>She eats so much chocolate. (Почему?)</item>
        <item>We must eat only healthy food. (Почему?)</item>
        <item>They lived in Israel. (Где?)</item>
        <item>You are so smart. (Почему?)</item>
        <item>You want so much to know it. (Почему?)</item>
        <item>You have paid for this 10 $. (Сколько?)</item>
        <item>She must come to you. (Когда?)</item>
        <item>They need our help. (Зачем?)</item>
        <item>We had to explain them how to work. (Почему?)</item>
        <item>She is so happy to see us. (Почему?)</item>
        <item>They will be allowed to rest. (Сколько времени?)</item>
        <item>You are so tired. (Почему?)</item>
        <item>People came there to rest. (Кто?)</item>
        <item>She wants to tell me a story. (Что?)</item>
        <item>We may rest now. (Где?)</item>
        <item>She brought food home. (Что?)</item>
        <item>You saw the boss this morning. (Когда?)</item>
    </string-array>
</resources>