<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/windowAlgorithmActivity"
    android:layout_height="match_parent"
    tools:context="com.example.reallyenglsh.screens.AlgorithmActivity"
    android:background="@drawable/tense_way_base">

    <TextView
        android:id="@+id/textViewTranslation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        tools:text="Translation"
        android:textColor="@color/algorithm_activity_text_view_translation"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutVerbForms" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:onClick="onClickNext"
        android:text="@string/algorithm_activity_button_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9233926" />

    <ImageView
        android:id="@+id/imageTenseObject"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/coach"
        android:contentDescription="@string/image_type_tense" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5512996" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <TextView
        android:id="@+id/textViewSentence"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:textColor="@color/sentence_text_algorithm_activity"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.0"
        tools:text="There is a sentence" />

    <Button
        android:id="@+id/buttonToTableActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_wrong_sentence"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.77" />

    <Switch
        android:id="@+id/switchIrregularVerb"
        android:layout_width="80dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSentence"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/switchShowPrompt"
        android:layout_width="80dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonToTableActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/buttonToTableActivity"
        app:layout_constraintTop_toTopOf="@+id/buttonToTableActivity"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageView
        android:id="@+id/imageViewTypeOfSentence"
        android:layout_width="63dp"
        android:layout_height="62dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/imageTenseObject"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="@+id/imageTenseObject"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/plus"
        android:contentDescription="@string/image_type_sentence" />

    <CheckBox
        android:id="@+id/checkBoxTenseFuture"
        style="@style/check_box_type_tense"
        android:layout_marginStart="30dp"
        android:drawableEnd="@drawable/check_box"
        android:text="@string/check_box_future"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxTensePresent"
        app:layout_constraintBottom_toTopOf="@id/checkBoxSimple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxTensePresent"
        style="@style/check_box_type_tense"
        android:checked="true"
        android:textColor="@color/check_box_tense_checked"
        android:drawableEnd="@drawable/check_box"
        android:text="@string/check_box_present"
        app:layout_constraintEnd_toStartOf="@id/checkBoxTensePast"
        app:layout_constraintStart_toEndOf="@id/checkBoxTenseFuture"
        app:layout_constraintBottom_toTopOf="@id/checkBoxStrong"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxTensePast"
        style="@style/check_box_type_tense"
        android:layout_marginEnd="30dp"
        android:drawableEnd="@drawable/check_box"
        android:text="@string/check_box_past"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/checkBoxTensePresent"
        app:layout_constraintBottom_toTopOf="@id/checkBoxToBe"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxToBe"
        style="@style/check_box_type_verbs"
        android:layout_marginEnd="30dp"
        android:drawableStart="@drawable/check_box_type_of_verb"
        android:text="@string/check_box_to_be"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/checkBoxStrong"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTensePast" />

    <CheckBox
        android:id="@+id/checkBoxStrong"
        style="@style/check_box_type_verbs"
        android:drawableStart="@drawable/check_box_type_of_verb"
        android:text="@string/check_box_strong"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxToBe"
        app:layout_constraintStart_toEndOf="@+id/checkBoxSimple"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTensePresent" />

    <CheckBox
        android:id="@+id/checkBoxSimple"
        style="@style/check_box_type_verbs"
        android:layout_marginStart="30dp"
        android:checked="true"
        android:drawableStart="@drawable/check_box_type_of_verb"
        android:text="@string/check_box_simple"
        android:textColor="@color/check_box_checked"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@id/checkBoxStrong"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTenseFuture" />

    <LinearLayout
        android:id="@+id/linearLayoutVerbForms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSentence">

        <TextView
            android:id="@+id/textViewV1"
            style="@style/text_view_v_form"
            android:textColor="@color/verb_form_v1" />

        <TextView
            android:id="@+id/textViewV2"
            style="@style/text_view_v_form"
            android:textColor="@color/verb_form_v2" />

        <TextView
            android:id="@+id/textViewV3"
            style="@style/text_view_v_form"
            android:textColor="@color/verb_form_v3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutCheckBoxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.40">

        <CheckBox
            android:id="@+id/checkBoxMinus"
            style="@style/check_box_sign"
            android:text="@string/sign_minus" />

        <CheckBox
            android:id="@+id/checkBoxPlus"
            style="@style/check_box_sign"
            android:checked="true"
            android:text="@string/sign_plus" />

        <CheckBox
            android:id="@+id/checkBoxQuestion"
            style="@style/check_box_sign"
            android:text="@string/sign_question" />

        <CheckBox
            android:id="@+id/checkBoxMinusQuestion"
            style="@style/check_box_sign"
            android:text="@string/sign_minus_question" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButtonShowDialogVerbs"
        style="@style/algorithm_activity_image_button_show"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:srcCompat="@drawable/button_verbs"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/image_button_verbs" />

    <ImageButton
        android:id="@+id/imageButtonShowDialogAdjectives"
        style="@style/algorithm_activity_image_button_show"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonShowDialogVerbs"
        app:layout_constraintVertical_bias="0.052"
        app:srcCompat="@drawable/button_adj"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/image_button_adjectives"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

</androidx.constraintlayout.widget.ConstraintLayout>