<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.reallyenglsh.screens.CouplesActivity"
    android:background="@color/background_activity_color">

    <TextView
        android:id="@+id/textViewQuestion"
        style="@style/couples_activity_text_view_qu_an"
        android:textColor="@color/couples_activity_text_view_question"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <TextView
        android:id="@+id/textViewAnswer"
        style="@style/couples_activity_text_view_qu_an"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textColor="@color/couples_activity_text_view_answer"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestion" />

    <Button
        android:id="@+id/buttonNextCouples"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickNextCouples"
        android:text="@string/couples_activity_button_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.88" />

    <Switch
        android:id="@+id/switchShowAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/buttonNextCouples"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.900"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.900"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/buttonShowLists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickShowDialogLists"
        android:text="@string/button_lists"
        app:layout_constraintBottom_toTopOf="@+id/textViewQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/textViewChosenLists"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:textColor="@color/couples_activity_text_view_chosen_lists"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonShowLists"
        app:layout_constraintEnd_toStartOf="@+id/buttonShowLists"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonShowLists" />

    <LinearLayout
        android:id="@+id/linearLayoutCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textViewChosenLists"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewChosenLists"
        app:layout_constraintTop_toBottomOf="@+id/textViewChosenLists">

        <TextView
            android:id="@+id/textViewQuantity"
            style="@style/couples_activity_linear_layout_text_view"
            android:textColor="#DD886C" />

        <TextView
            android:id="@+id/textViewVerticalLine"
            style="@style/couples_activity_linear_layout_text_view"
            android:text="@string/counter_vertical_line"
            android:textColor="#7BC4CD" />

        <TextView
            android:id="@+id/textViewRest"
            style="@style/couples_activity_linear_layout_text_view"
            android:textColor="#95BD66" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

</androidx.constraintlayout.widget.ConstraintLayout>